--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "piba",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "base application for shelter application",
   "main": "index.js",
   "scripts": {
     "start": "node backend/server.js",
@@ -15,7 +15,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.3.5"
+    "mongoose": "^6.3.5",
+    "nanoid": "^3.3.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
