--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-table": "^0.0.1-alpha.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
