--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "All-Purpose Apps (https://www.allpurposeapps.com/)",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
