--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"
+    "jsx": "preserve",
+    "baseUrl": "./src",
+    "paths": {
+      "@/components/*": ["./components/*"],
+      "@/pages/*": ["./pages/*"],
+      "@/routes/*": ["./routes/*"]
+    }
   }
 }
