--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@tanstack/react-table": "^0.0.1-alpha.0",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "nanoid": "^3.3.4",
     "react": "^18.0.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
