--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,18 +8,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@tanstack/react-table": "^0.0.1-alpha.0",
-    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "nanoid": "^3.3.4",
     "react": "^18.0.0",
+    "react-confirm-alert": "^3.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "react-toastify": "^9.0.4",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
+    "@redux-devtools/core": "^3.13.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
