--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,15 @@
     "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
     "@redux-devtools/core": "^3.13.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "babel-jest": "^28.1.1",
+    "jest": "^28.1.1",
+    "react-test-renderer": "^18.2.0",
     "vite": "^2.9.9"
   }
 }
