--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "install:clean": "rm -rf node_modules package-lock.json && npm install"
+    "install:clean": "rm -rf node_modules package-lock.json && npm install",
+    "test": "jest",
+    "jest:watch": "jest --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
