--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview",
     "install:clean": "rm -rf node_modules package-lock.json && npm install",
     "test": "jest",
-    "jest:watch": "jest --watch"
+    "jest:watch": "jest --watch",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@tanstack/react-table": "^0.0.1-alpha.0",
     "dotenv": "^16.0.1",
-    "nanoid": "^4.0.0",
+    "nanoid": "~3.3.4",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.2",
     "react-datepicker": "^4.8.0",
@@ -36,7 +37,9 @@
     "@vitejs/plugin-react": "^1.3.2",
     "babel-jest": "^28.1.1",
     "jest": "^28.1.1",
+    "react-router-to-array": "^0.1.3",
     "react-test-renderer": "^18.2.0",
-    "vite": "^2.9.12"
+    "vite": "^2.9.12",
+    "husky": "^8.0.0"
   }
 }
