--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
     "@tanstack/react-table": "^0.0.1-alpha.0",
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "formik": "^2.2.9",
     "nanoid": "~3.3.4",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.2",
@@ -36,10 +38,10 @@
     "@types/react-dom": "^18.0.5",
     "@vitejs/plugin-react": "^1.3.2",
     "babel-jest": "^28.1.1",
+    "husky": "^8.0.0",
     "jest": "^28.1.1",
     "react-router-to-array": "^0.1.3",
     "react-test-renderer": "^18.2.0",
-    "vite": "^2.9.12",
-    "husky": "^8.0.0"
+    "vite": "^2.9.12"
   }
 }
